<resources>
    <string name="app_name">NUMAD17S-RuihaoHuang</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_tic_tac_toe">TicTacToe</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_dictionary">Test Dictionary</string>
    <string name="title_activity_acknowledgements">Acknowledgements</string>
    <string name="title_activity_scroggle_main">Word Game</string>
    <string name="title_activity_scroggle_game">Word Game</string>
    <string name="title_activity_scroggle_acknowledgements">Acknowledgements</string>
    <string name="title_activity_communication">Communication</string>
    <string name="title_activity_communication_acknowledgements">Acknowledgements</string>
    <string name="title_activity_two_player_scroggle">Two Player Word Game</string>
    <string name="title_activity_two_player_scroggle_game">Two Player Word Game</string>
    <string name="title_activity_two_player_scroggle_acknowledgements">Acknowledgements</string>
    <string name="title_activity_scroggle_top_scorer_list">Top Scorer List</string>
    <string name="button_about">About</string>
    <string name="button_generate_error">Generate Error</string>
    <string name="button_tic_tac_toe">Tic Tac Toe</string>
    <string name="button_dictionary">Dictionary</string>
    <string name="button_quit">Quit</string>
    <string name="button_return">Return to Menu</string>
    <string name="button_acknowledgements">Acknowledgements</string>
    <string name="button_word_game">Word Game</string>
    <string name="button_new_game">New Game</string>
    <string name="button_pause">Pause</string>
    <string name="button_resume">Resume</string>
    <string name="button_clear">Clear</string>
    <string name="button_hint">Hints</string>
    <string name="button_back">Back to Menu</string>
    <string name="button_start">Start!</string>
    <string name="button_communication">Communication</string>
    <string name="button_send">Send</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_two_player_scroggle">Two Player Word Game</string>
    <string name="button_top_scorer_list">Top Scorer List</string>
    <string name="description_head_shot">A nice head shot picture of you</string>
    <string-array name="descriptions">
        <item name="description_name">Name: %1$s</item>
        <item name="description_email">Email: %1$s</item>
        <item name="description_year">Year in School: %1$s</item>
        <item name="description_degree_program">Degree Program: %1$s</item>
    </string-array>
    <string name="description_IMEI">IMEI: %1$s</string>
    <string name="description_volume">Volume</string>
    <string-array name="my_information">
        <item name="my_name">Ruihao Huang</item>
        <item name="my_email">huang.r@husky.neu.edu</item>
        <item name="my_year">Junior</item>
        <item name="my_degree_program">Computer Science</item>
    </string-array>
    <string-array name="scorer_list">
        <item name="first">First</item>
        <item name="second">Second</item>
        <item name="third">Third</item>
    </string-array>
    <string name="toast_request_permission_read_phone_state">Please allow the permission in Settings to access IMEI</string>
    <string name="toast_request_permission_write_external_storage">Please allow the permission in Settings to set up database</string>
    <string name="toast_initialization_done">Initialization done</string>
    <string name="toast_visit_tile_back_to_back">You cannot visit the same grid back to back</string>
    <string name="toast_same_word_detected">You cannot select the same word to score</string>
    <string name="toast_word_does_not_exist">Word does not exist</string>
    <string name="toast_word_found">Word %1$s found. You get %2$d points.</string>
    <string name="toast_hints">One of the word is %1$s</string>
    <string name="toast_username_already_registered">This username has already been registered</string>
    <string name="toast_username_contains_space">Username cannot contain space</string>
    <string name="toast_no_username">Please enter your username</string>
    <string name="toast_content_empty">Content cannot be empty</string>
    <string name="toast_show_opponent">Your opponent is %1$s. %2$s will go first.</string>
    <string name="toast_you">You</string>
    <string name="dialog_wait_create_database">Initializing database&#8230;\n
        Do not close the application until it has finished&#8230;</string>
    <string name="acknowledgements_dictionary">\
        &lt;h3&gt;Strategy of my dictionary&lt;/h3&gt;
        &lt;p&gt;
        &#160;&#160;I mainly used the SQLite database for storage and query.\
        Besides, I encoded the short words (not longer than 12 letters) to save space.\
        It is less than 90% of the size before I encoded them.\
        To do this, I created two tables in my database. One is used for storing short words in integer,\
        the other is used for storing long words in text.\
        The database is created only once when you first open it but it is very time consuming\
        (nearly an hour on Kyocera Rise Emulator, but about one minute on Nexus 5X).
        I also created indexes for the two tables to reduce complexity from O(n) to O(logn).\
        When querying if a word exists, I first determine if the word is a short word or a long word.\
        Then I query it in the correspondent table.\
        I did a test on its performance, which showed that 1000 times of querying takes about 200ms on an emulator,\
        about 400ms on my Nexus phone.
        &lt;/p&gt;
        &lt;h3&gt;Assets&lt;/h3&gt;
        &lt;p&gt;
        &lt;strong&gt;Application icon:&#160;&lt;/strong&gt;
        &lt;a href="http://i396.photobucket.com/albums/pp42/ubinman/feather.png"&gt;
        http://i396.photobucket.com/albums/pp42/ubinman/feather.png&lt;/a&gt;
        &lt;/p&gt;
        &lt;p&gt;
        &lt;strong&gt;BGM in the Tic Tac Toe game:&#160;&lt;/strong&gt;
        &lt;a href="http://www.bensound.com/royalty-free-music?download=cute"&gt;
        http://www.bensound.com/royalty-free-music?download=cute&lt;/a&gt;,
        &lt;br/&gt;
        &lt;a href="http://www.bensound.com/royalty-free-music?download=acousticbreeze"&gt;
        http://www.bensound.com/royalty-free-music?download=acousticbreeze&lt;/a&gt;
        &lt;/p&gt;
        &lt;h3&gt;References&lt;/h3&gt;
        &lt;p&gt;
        &lt;a href="http://stackoverflow.com/questions/37904739/html-fromhtml-deprecated-in-android-n"&gt;
        http://stackoverflow.com/questions/37904739/html-fromhtml-deprecated-in-android-n&lt;/a&gt;,
        &lt;br/&gt;
        &lt;a href="http://stackoverflow.com/questions/12119800/android-set-link-with-a-href-in-textview"&gt;
        http://stackoverflow.com/questions/12119800/android-set-link-with-a-href-in-textview&lt;/a&gt;,
        &lt;br/&gt;
        &lt;a href="http://stackoverflow.com/questions/12154940/how-to-make-a-beep-in-android"&gt;
        http://stackoverflow.com/questions/12154940/how-to-make-a-beep-in-android&lt;/a&gt;,
        &lt;br/&gt;
        &lt;a href="http://stackoverflow.com/questions/9109438/how-to-use-an-existing-database-with-an-android-application"&gt;
        http://stackoverflow.com/questions/9109438/how-to-use-an-existing-database-with-an-android-application&lt;/a&gt;,
        &lt;br/&gt;
        &lt;a href="http://stackoverflow.com/questions/17034511/android-database-sqlite-sqlitecantopendatabaseexception-unknown-error-code-14"&gt;
        http://stackoverflow.com/questions/17034511/android-database-sqlite-sqlitecantopendatabaseexception-unknown-error-code-14&lt;/a&gt;,
        &lt;br/&gt;
        &lt;a href="http://stackoverflow.com/questions/4081763/access-resource-files-in-android"&gt;
        http://stackoverflow.com/questions/4081763/access-resource-files-in-android&lt;/a&gt;,
        &lt;br/&gt;
        &lt;a href="http://stackoverflow.com/questions/7666589/using-getresources-in-non-activity-class"&gt;
        http://stackoverflow.com/questions/7666589/using-getresources-in-non-activity-class&lt;/a&gt;,
        &lt;br/&gt;
        &lt;a href="http://stackoverflow.com/questions/26419538/how-to-read-a-line-in-bufferedinputstream"&gt;
        http://stackoverflow.com/questions/26419538/how-to-read-a-line-in-bufferedinputstream&lt;/a&gt;,
        &lt;br/&gt;
        &lt;a href="http://stackoverflow.com/questions/28977308/read-all-lines-with-bufferedreader"&gt;
        http://stackoverflow.com/questions/28977308/read-all-lines-with-bufferedreader&lt;/a&gt;,
        &lt;br/&gt;
        &lt;a href="http://stackoverflow.com/questions/6355096/how-to-create-edittext-with-crossx-button-at-end-of-it"&gt;
        http://stackoverflow.com/questions/6355096/how-to-create-edittext-with-crossx-button-at-end-of-it&lt;/a&gt;,
        &lt;br/&gt;
        &lt;a href="http://stackoverflow.com/questions/2591036/how-to-hide-the-title-bar-for-an-activity-in-xml-with-existing-custom-theme"&gt;
        http://stackoverflow.com/questions/2591036/how-to-hide-the-title-bar-for-an-activity-in-xml-with-existing-custom-theme&lt;/a&gt;,
        &lt;br/&gt;
        &lt;a href="http://stackoverflow.com/questions/29040089/getting-android-sqlite-syntax-error-running-in-api-14"&gt;
        http://stackoverflow.com/questions/29040089/getting-android-sqlite-syntax-error-running-in-api-14&lt;/a&gt;,
        &lt;br/&gt;
        &lt;a href="http://stackoverflow.com/questions/1609637/is-it-possible-to-insert-multiple-rows-at-a-time-in-an-sqlite-database"&gt;
        http://stackoverflow.com/questions/1609637/is-it-possible-to-insert-multiple-rows-at-a-time-in-an-sqlite-database&lt;/a&gt;,
        &lt;br/&gt;
        &lt;a href="http://stackoverflow.com/questions/15232895/same-convertview-instance-is-passed-for-visible-views-in-cursoradapter"&gt;
        http://stackoverflow.com/questions/15232895/same-convertview-instance-is-passed-for-visible-views-in-cursoradapter&lt;/a&gt;,
        &lt;br/&gt;
        and &lt;a href="https://developer.android.com/index.html"&gt;
        Android Documentation
        &lt;/a&gt;.
        &lt;/p&gt;
        &lt;h3&gt;People who helped me&lt;/h3&gt;
        &lt;p&gt;
        &lt;strong&gt;Aocheng Wang (THU):&#160;&lt;/strong&gt;helped me distinguish between getApplicationContext() and
        MyActivity.this, thus fixed a bug.
        &lt;/p&gt;
    </string>
</resources>