<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.neu.madcourse.ruihaohuang.main.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_about"
        android:id="@+id/button_about" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_generate_error"
        android:layout_below="@+id/button_about"
        android:id="@+id/button_generate_error" />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_tic_tac_toe"
        android:layout_below="@+id/button_generate_error"
        android:id="@+id/button_tic_tac_toe" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_dictionary"
        android:layout_below="@id/button_tic_tac_toe"
        android:id="@+id/button_dictionary" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_word_game"
        android:layout_below="@id/button_dictionary"
        android:id="@+id/button_word_game" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_communication"
        android:text="@string/button_communication"
        android:layout_below="@+id/button_word_game"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_quit"
        android:layout_below="@+id/button_communication"
        android:id="@+id/button_quit" />

</RelativeLayout>
