<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.neu.madcourse.ruihaohuang.twoplayerscroggle.TwoPlayerScroggleMainActivity"
    tools:showIn="@layout/activity_two_player_scroggle_main">

    <Button
        android:id="@+id/button_new_game"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_new_game"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_acknowledgements"
        android:text="@string/button_acknowledgements"
        app:layout_constraintTop_toBottomOf="@+id/button_new_game"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_quit"
        android:text="@string/button_quit"
        app:layout_constraintTop_toBottomOf="@+id/button_acknowledgements"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</android.support.constraint.ConstraintLayout>
